# dara_qyzmet

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  run_vllm.sh
backend/: Dockerfile  README.md  agent.ipynb  entrypoint.sh  pyproject.toml
backend/app/: catalog.py  config.py  db.py  deps.py  main.py  models.py  observability.py  schemas.py  security.py  seed.py
backend/app/agent/: function_calling.py  graph.py  state.py  tool_schemas.py  tools.py
backend/app/bot/: main.py
backend/app/routers/: acceptance.py  agent.py  auth.py  invoices.py  orders.py  products.py  supplier.py
backend/app/services/: act_pdf.py  invoice_check.py  recalc.py
backend/app/static/: index.html  miniapp.html
backend/app/vlm/: client.py  domain.py  pdf.py  validate.py
backend/tests/: conftest.py  test_recalc.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: Acceptance.jsx  ActDocument.jsx  AgentPage.jsx  AgentWidget.jsx  App.jsx  CreateOrder.jsx  Dashboard.jsx  Login.jsx  Orders.jsx  ProductPhotos.jsx  Products.jsx  ReceiptDocument.jsx  Scan.jsx  ShipDialog.jsx  Shipments.jsx  Stock.jsx  Supplier.jsx  api.js  icons.jsx  pdfExport.js  styles.css  ui.jsx
pitch/: index.html  presentation.html  work-report.html
pitch/deck/: index.html  script.js  slide4-devices.html  styles.css
