[project]
name = "dara-kyzmet-backend"
version = "1.0.0"
description = "SaaS-приёмка накладных: FastAPI + PostgreSQL + VLM (Qwen2.5-VL через vLLM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.2",
    "SQLAlchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "PyJWT>=2.10",
    "bcrypt>=4.2",
    "pymupdf>=1.25",
    "pillow>=11.0",
    # --- агент (LangGraph) ---
    "langgraph>=0.2.60",
    "langchain-core>=0.3.30",
    # --- поиск товара по каталогу (Qdrant + CLIP-эмбеддинги, ONNX/CPU) ---
    "qdrant-client>=1.12",
    "fastembed>=0.5",
    # --- наблюдаемость агента (опц.); SDK v2 под self-hosted Langfuse v2 ---
    "langfuse>=2.0,<3",
    # --- Telegram-бот приёмки (фронт поверх API) ---
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
